2016-February-08 Struan Robertson

		* Documentation corrections.

2016-February-07 Chris Morley

	* src/plugins/AnalyticalRepresentation.cpp,src/plugins/BeyerSwinehart.cpp,
	src/plugins/BoltzmannDistribution.cpp,src/plugins/ClassicalRotor.cpp
	src/plugins/DefinedTunnelingCoefficients.cpp,src/plugins/EckartCoefficients.cpp
	src/plugins/ErrorPropagation.cpp,src/plugins/fitting.cpp,src/plugins/gridsearch.cpp
	src/plugins/Marquardt.cpp,src/plugins/PriorDistribution.cpp
	src/plugins/SensitivityAnalysis.cpp,src/plugins/simplecalc.cpp
	src/plugins/ThermodynamicTable.cpp,	src/plugins/UnitTests.cpp
	src/plugins/WKBTunnellingCoefficients.cpp: Give all plugins a Clone() method,
	  allowing them to have multiple instances. Remove inconsistent comments.

2016-February-06 Struan Robertson

    * examples/2Methyl_to_Ethane: Added baselines.
		
		* System.cpp, CollisionOperator.cpp: Minor change to reduce redundant messages to output. 

		* Documentation update.

2016-February-06 Struan Robertson

    * Reaction.h/.cpp, Crossing.h, SimpleRRKM.cpp: Removal of crossing plugin base class.

2016-February-06 Struan Robertson

    * WKBCrossing.cpp, LandauZenerCrossing.cpp: Added revised version of system crossing
		classes, now deriving from MicroRateCalculator base class.

		*examples/spin_forbidden_kinetics: Updated to reflect new syntax.

2016-January-30 Struan Robertson

    * Documentation update.

		* examples/: baseline updates.

2016-January-30 Struan Robertson

    * Documentation update.

		* examples/ErrorPropagation/ipropyl_EP.xml: Extended to have multiple stages.

		* System.cpp: Changes to copyright.

		* ErrorPropagation: Minor tidy.

2016-January-28 Chris Morley

	* mesmer1.xsl:Error propagation data added to Fiited Parameters section of
	  Firefox output. Hardwired cm3 molecule s-1  units because other 
	  concentration units converted to molecile cm-3 during input.
	  Should the original units be restored?
